RESOLVED FIXED23171
Cannot set different LocalStorage paths to different page groups.
https://bugs.webkit.org/show_bug.cgi?id=23171
Summary Cannot set different LocalStorage paths to different page groups.
Yael
Reported 2009-01-07 12:32:45 PST
WebKit Qt API does not have API for setting page groups and does not allow setting different LocalStorage paths for different page groups,
Attachments
Add API for setting page group per page and allowing setting different LocalStorage paths to different page groups. (5.46 KB, patch)
2009-01-07 12:34 PST, Yael
no flags
Alternate patch with private API (7.93 KB, patch)
2009-01-13 09:55 PST, Simon Hausmann
vestbo: review+
Yael
Comment 1 2009-01-07 12:34:57 PST
Created attachment 26501 [details] Add API for setting page group per page and allowing setting different LocalStorage paths to different page groups.
Simon Hausmann
Comment 2 2009-01-13 09:55:35 PST
Created attachment 26672 [details] Alternate patch with private API Reworked patch from Yael with private Qt API.
Simon Hausmann
Comment 3 2009-01-13 09:59:08 PST
Landed in r39863
Note You need to log in before you can comment on or make changes to this bug.