2009-01-13  Simon Hausmann  <simon.hausmann@nokia.com>

Reviewed by Tor Arne Vestbø.

        https://bugs.webkit.org/show_bug.cgi?id=23171

        Based on patch by Yael Aharon  <yael.aharon@nokia.com>

        Make the QWebSettings functions for setting the path for the local
        storage database private QtWebkit API, including the ability to
        associated a QWebPage with a named page group.

Canonical link: https://commits.webkit.org/32061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39863 268f45cc-cd09-0410-ab3c-d52691b4dbfc