WebKit/qt/Api/qwebsettings.cpp
@@ -729,7 +729,7 @@ QString QWebSettings::offlineWebApplicationCachePath()
 #endif
 }
 
-/*!
+/*
     \since 4.5
 
     Sets the path for HTML5 local storage databases to \a path.
@@ -740,14 +740,15 @@ QString QWebSettings::offlineWebApplicationCachePath()
 
     \sa localStorageDatabasePath()
 */
-void QWebSettings::setLocalStorageDatabasePath(const QString& path)
+
+void QWEBKIT_EXPORT qt_websettings_setLocalStorageDatabasePath(QWebSettings* settings, const QString& path)
 {
-    QWebSettingsPrivate *global = QWebSettings::globalSettings()->d;
-    global->localStorageDatabasePath = path;
+    QWebSettingsPrivate *d = settings->handle();
+    d->localStorageDatabasePath = path;
     d->apply();
 }
 
-/*!
+/*
     \since 4.5
 
     Returns the path for HTML5 local storage databases
@@ -755,8 +756,12 @@ void QWebSettings::setLocalStorageDatabasePath(const QString& path)
 
     \sa setLocalStorageDatabasePath()
 */
-QString QWebSettings::localStorageDatabasePath() const
+QString QWEBKIT_EXPORT qt_websettings_localStorageDatabasePath(QWebSettings* settings)
 {
-    QWebSettingsPrivate *global = QWebSettings::globalSettings()->d;
-    return global->localStorageDatabasePath;
+    return settings->handle()->localStorageDatabasePath;
 }
+
+/*!
+    \fn QWebSettingsPrivate* QWebSettings::handle() const
+    \internal
+*/
