WebKit/qt/Api/qwebsettings.h
@@ -115,8 +115,7 @@ public:
     static void setOfflineWebApplicationCachePath(const QString& path);
     static QString offlineWebApplicationCachePath();
 
-    void setLocalStorageDatabasePath(const QString& path);
-    QString localStorageDatabasePath() const;
+    inline QWebSettingsPrivate* handle() const { return d; }
 
 private:
     friend class QWebPagePrivate;
